# tailsrv

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO  kafka_replacement.md  manpage.rst  vs_kafka.md
examples/: loadtest.rs  tscat.rs  tssync.rs
src/: cache.rs  error.rs  file_list.rs  header.rs  index.rs  lib.rs  librarian.rs  main.rs  nursery.rs  pool.rs  proto.rs  token_box.rs  tracker.rs  types.rs
src/index/: cache.rs  line.rs  mod.rs  prefixed.rs  seqnum.rs
