[package]
name = "tailsrv"
version = "0.7.0"
description = "A high-performance file-streaming server"
readme = "README.md"
repository = "https://github.com/asayers/tailsrv"
license = "Unlicense"
authors = ["Alex Sayers <alex.sayers@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
inotify = { version = "0.10.2", default-features = false }
rustix = { version = "0.38.30", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dependencies.tracing-journald]
version = "0.3"
optional = true

[dependencies.sd-notify]
version = "0.4"
optional = true

[dev-dependencies]
fd-lock = "3.0.13"
