[package]
name = "tailsrv"
version = "0.7.1"
description = "A high-performance file-streaming server"
readme = "README.md"
repository = "https://github.com/asayers/tailsrv"
license = "Unlicense"
authors = ["Alex Sayers <alex.sayers@gmail.com>"]
edition = "2021"

[dependencies]
bpaf = { version = "0.9.14", features = ["derive"] }
inotify = { version = "0.11.0", default-features = false }
rustix = { version = "0.38.37", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dependencies.tracing-journald]
version = "0.3"
optional = true

[dependencies.sd-notify]
version = "0.4"
optional = true

[dev-dependencies]
fd-lock = "4.0.2"
