[package]
name = "tailsrv"
version = "0.9.0"
description = "A high-performance file-streaming server"
readme = "README.md"
repository = "https://github.com/asayers/tailsrv"
license = "Unlicense"
authors = ["Alex Sayers <alex.sayers@gmail.com>"]
edition = "2021"

[dependencies]
bpaf = { version = "0.9.15", features = ["derive"] }
rustix = { version = "0.38.41", features = ["fs", "mm", "pipe"] }
rustix-uring = "0.2.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-journald = { version = "0.3", optional = true }
sd-notify = { version = "0.4", optional = true }

[dev-dependencies]
fd-lock = "4.0.2"
liveterm = "0.3.0"
net2 = "0.2.39"

[features]
systemd = ["tracing-journald", "sd-notify"]
